<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Man</string>
    <string name="title_activity_project_select">ProjectMan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectProject">Select Project</string>
    <string name="proceed_to_project">Proceed</string>
    <string name="create_new_shop">Create New Shop</string>
    <string name="title_activity_project">My Project</string>
    <string name="project_desc_textfield">Project Details</string>
    <string name="submit_button">Submit</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact">Shop Contact</string>
    <string name="shop_radius">Shop Radius</string>
    <string name="shop_details_tv">Shop Details</string>
    <string name="title_activity_sales">SalesActivity</string>
    
    <string name="insert_data_tv">Insert Data</string>
    <string name="sales_project_list_edit">Project List</string>
    <string name="sale_shop_name_edit">Shop Name</string>
    <string name="sales_value_edit">Sales</string>
    <string name="sales_coord_lat_edit">Latitude</string>
    <string name="sales_coord_long_edit">Longitude</string>
    <string name="Sales_submit_btn">Submit</string>
    
    <string name="check_projects_menu">Check Projects</string>
    <string name="go_to_sales">Enter Sales</string>
    <string name="logout">Logout</string>

</resources>
