<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SalesActivity" >

    <ScrollView
        android:id="@+id/sales_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sales_project_name_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sales_project_list_edit"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/sale_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sale_shop_name_edit"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <TextView
                android:id="@+id/insert_data_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_data_tv"
                android:textSize="35sp" />
            
            <EditText
                android:id="@+id/sales_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sales_value_edit"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/sales_coord_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sales_coord_lat_edit"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/sales_coord_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sales_coord_long_edit"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sales_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/Sales_submit_btn" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>