<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_project_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectSelectActivity" >

    <TextView
        android:id="@+id/select_project_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectProject"
        android:textSize="35sp" />

    <Button
        android:id="@+id/create_new_shop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/create_new_shop" />

    <Button
        android:id="@+id/proceed_to_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_new_shop_button"
        android:layout_alignBottom="@+id/create_new_shop_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/proceed_to_project" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_new_shop_button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/select_project_textView" >

    </ListView>

</RelativeLayout>